--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load socialaccount %}
 
 {% block title %}Sign Up{% endblock %}
 
@@ -9,4 +10,6 @@
     {{ form.as_p }}
     <button type="submit">Sign Up</button>
 </form>
+<a href="{% provider_login_url 'google' %}">Sign Up with Google</a>
+
 {% endblock %}
